# pnlc-agentclinic

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.yaml
configs/critic/: iql.yaml
configs/model_backends/: hf-embed.yaml  hf-generation.yaml  qwen2.5-72b.yaml  qwen3-embed.yaml
configs/moderator/: hf-generation.yaml  openai-compatible.yaml  same.yaml
logs/: stage1_baseline_1783774998.json  stage1_baseline_1783779459.json  stage1_baseline_1783780318.json  stage1_baseline_1783790897.json  stage1_baseline_1783860850.json  stage1_trajectories_1783790897.json  stage1_trajectories_1783860850.json
notebook/: data_diagnostic.ipynb
scripts/: run_embed_dataset.py  run_pnlc_agentclinic.py  run_relabel_dataset.py  run_stage1_baseline.py  run_stage1_smoketest.py  test_embedder.py  test_hydra_backend.py  train_critic.py
src/pnlc_agentclinic/: openai_compatible.py
src/pnlc_agentclinic/data/: schema.py
src/pnlc_agentclinic/embedding/: embedder.py  factory.py  huggingface_embedder.py
src/pnlc_agentclinic/env/: agentclinic_adapter.py
src/pnlc_agentclinic/llm_backends/: factory.py  huggingface_backend.py  openai_compatible.py
src/pnlc_agentclinic/planning/: __init__.py  pnlc_planner.py
src/pnlc_agentclinic/summarization/: summarizer.py
src/pnlc_agentclinic/value_learning/: her_relabel.py  iql_critic.py
tests/: test_agentclinic_pnlc_adapter.py  test_pnlc_planner.py
