[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnlc-agentclinic"
version = "0.1.0"
description = "Testing PNLC's natural-language critic on AgentClinic (knowledge-heavy, multi-turn medical diagnosis)"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "openai>=1.0",          # backend client for Qwen / any OpenAI-compatible endpoint
    "pyyaml>=6.0",          # config loading
    "hydra-core>=1.3",      # CLI + config composition
    "omegaconf>=2.3",       # underlying config objects used by Hydra
    "torch>=2.0",           # IQL value-function training (value_learning/)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

# src-layout: code lives in src/pnlc_agentclinic/, not at the repo root
[tool.setuptools.packages.find]
where = ["src"]